# MahiroSearch

./: .gitignore  CHANGELOG.md  LICENSE.txt  MahiroSearch.spec  README.md  build_linux.py  build_macos.py  build_windows.py  config.example.yaml  config.py  main.py  pyproject.toml  requirements.txt  services.py
.github/workflows/: release.yml
db/: chunks_repo.py  filenames_repo.py  lancedb_client.py  schema.py
embedding/: client.py
indexing/: backend_base.py  backend_oswalk.py  chunker.py  content_reader.py  exclusion.py  pipeline.py
search/: searcher.py
ui/: __init__.py  main_window.py
ui/pages/: index_page.py  search_page.py  settings_page.py
ui/widgets/: __init__.py  path_tag.py  result_card.py
utils/: autostart.py  file_open.py
workers/: __init__.py  index_worker.py  search_worker.py
